# scenex

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  README.md  index.html  mkdocs.yml  pyproject.toml  x.py  zensical.toml
.github/workflows/: ci.yml  deploy_docs.yml  docs_preview.yml
_stubs/imgui_bundle/implot/: internal.pyi
dev/: 404.html  gen_examples.py  index.html  objects.inv  search.json  sitemap.xml
dev/_overrides/: main.html
dev/contributing/: index.html
dev/css/: extra.css
dev/examples/: index.html
dev/examples/antialiasing/: index.html
dev/examples/basic_line/: index.html
dev/examples/basic_mesh/: index.html
dev/examples/basic_points/: index.html
dev/examples/basic_scene/: index.html
dev/examples/basic_text/: index.html
dev/examples/basic_volume/: index.html
dev/examples/blending/: index.html
dev/examples/cursor_points/: index.html
dev/examples/draggable_rect/: index.html
dev/examples/event_filters/: index.html
dev/examples/histogram/: index.html
dev/examples/keyboard_pan_zoom/: index.html
dev/examples/multi_view/: index.html
dev/examples/regions/: index.html
dev/examples/rgb/: index.html
dev/install/: index.html
dev/js/: install-table.js
dev/reference/scenex/: index.html
dev/reference/scenex/adaptors/: index.html
dev/reference/scenex/app/: index.html
dev/reference/scenex/app/events/: index.html
dev/reference/scenex/conftest/: index.html
dev/reference/scenex/imgui/: index.html
dev/reference/scenex/model/: index.html
dev/reference/scenex/util/: index.html
dev/reference/scenex/utils/: index.html
dev/reference/scenex/utils/projections/: index.html
dev/references/: index.html
dev/references/adaptors/: index.html
dev/references/app/: index.html
dev/references/app/events/: index.html
dev/references/imgui/: index.html
dev/references/model/: index.html
dev/references/utils/: index.html
dev/references/utils/projections/: index.html
dev/search/: search_index.json
dev/theory/: index.html
docs/: README.md  contributing.md  index.md  install.md  references.md  theory.md
docs/references/: adaptors.md  app.md  imgui.md  model.md
docs/references/app/: events.md
docs/references/utils/: index.md  projections.md
examples/: antialiasing.py  aspect_ratio.py  basic_line.py  basic_mesh.py  basic_points.py  basic_scene.py  basic_text.py  basic_volume.py  blending.py  camera_projection.py  conftest.py  cursor_points.py  draggable_rect.py  event_filters.py  example2.py  histogram.py  imgui_controls.py  keyboard_pan_zoom.py  multi_view.py  notebook.ipynb  regions.py  rgb.py
src/scenex/: __init__.py  _util.py  app.py  conftest.py  util.py
src/scenex/adaptors/: __init__.py  _auto.py  _base.py  _registry.py  auto.py  base.py  registry.py
src/scenex/adaptors/_pygfx/: __init__.py  _adaptor_registry.py  _camera.py  _canvas.py  _image.py  _line.py  _mesh.py  _node.py  _points.py  _text.py  _view.py  _volume.py
src/scenex/adaptors/_vispy/: __init__.py  _adaptor_registry.py  _camera.py  _canvas.py  _image.py  _line.py  _mesh.py  _node.py  _points.py  _scene.py  _text.py  _view.py  _volume.py
src/scenex/adaptors/pygfx/: __init__.py  _adaptor_registry.py  _camera.py  _canvas.py  _image.py  _node.py  _points.py  _scene.py  _view.py  _volume.py
src/scenex/adaptors/vispy/: __init__.py  _adaptor_registry.py  _camera.py  _canvas.py  _image.py  _node.py  _points.py  _scene.py  _view.py  _volume.py
src/scenex/app/: __init__.py  _auto.py  _glfw.py  _jupyter.py  _jupyter_keymap.py  _qt.py  _wx.py  _wx_keymap.py
src/scenex/app/events/: __init__.py  _events.py
src/scenex/backends/: _base.py  adaptor_base.py  auto.py
src/scenex/backends/pygfx/: __init__.py  _adaptor_registry.py  _camera.py  _canvas.py  _image.py  _node.py  _points.py  _scene.py  _view.py
src/scenex/events/: __init__.py  _auto.py  _glfw.py  _jupyter.py  _qt.py  _wx.py  controllers.py  events.py
src/scenex/imgui/: __init__.py  _controls.py
src/scenex/interaction/: __init__.py  _controllers.py  _coordinator.py  _resize.py
src/scenex/model/: __init__.py  _base.py  _canvas.py  _color.py  _controller.py  _evented_list.py  _grid.py  _layout.py  _transform.py  _view.py  adaptor_base.py  canvas.py  layout.py  transform.py  view.py
src/scenex/model/_nodes/: __init__.py  camera.py  image.py  line.py  mesh.py  node.py  points.py  scene.py  text.py  volume.py
src/scenex/model/nodes/: __init__.py  camera.py  image.py  node.py  points.py  scene.py  volume.py
src/scenex/utils/: __init__.py  _app.py  _tree.py  controllers.py  projections.py
tests/: conftest.py  test_basic_scene.py  test_controllers.py  test_imgui.py  test_model.py  test_scenex.py  test_util.py  test_view_resizer.py  test_zoom_to_fit.py
tests/adaptors/_pygfx/: __init__.py  test_camera.py  test_canvas.py  test_image.py  test_layout.py  test_line.py  test_mesh.py  test_points.py  test_text.py  test_volume.py
tests/adaptors/_vispy/: __init__.py  test_camera.py  test_canvas.py  test_image.py  test_layout.py  test_line.py  test_mesh.py  test_points.py  test_text.py  test_volume.py
tests/app/: test_auto.py  test_jupyter.py  test_qt.py  test_wx.py
tests/app/events/: test_ray.py
tests/events/: test_jupyter.py  test_qt.py  test_wx.py
tests/model/: test_canvas.py  test_layout.py  test_line.py  test_view.py
tests/model/_nodes/: test_camera.py  test_canvas.py  test_image.py  test_line.py  test_mesh.py  test_node.py  test_points.py  test_scene.py  test_text.py  test_view.py  test_volume.py
tests/utils/: test_controllers.py  test_projections.py
v0.0.1/: 404.html  index.html  objects.inv  sitemap.xml
v0.0.1/reference/scenex/: index.html
v0.0.1/reference/scenex/adaptors/: index.html
v0.0.1/reference/scenex/model/: index.html
v0.0.1/reference/scenex/util/: index.html
